parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> PROGRAM CREATE_DIRFUNC ID PTOCOMA VARS_P FUNCS_P MAIN_G
Rule 2     VARS -> VAR TYPE ID ADD_VAR VARS_PP PTOCOMA
Rule 3     VARS -> VAR TYPE ID ADD_VAR CORIZQ CTE_INT add_dim CORDER MAT_AUX actAddr PTOCOMA
Rule 4     VARS_P -> VARS VARS_P
Rule 5     VARS_P -> empty
Rule 6     VARS_PP -> COMMA ID ADD_VAR VARS_PP
Rule 7     VARS_PP -> empty
Rule 8     MAT_AUX -> CORIZQ CTE_INT add_dim CORDER
Rule 9     MAT_AUX -> empty
Rule 10    FUNCS -> FUNC TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc
Rule 11    FUNCS -> FUNC VOID CURR_TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc
Rule 12    FUNCS_P -> FUNCS FUNCS_P
Rule 13    FUNCS_P -> empty
Rule 14    TYPE -> INT CURR_TYPE
Rule 15    TYPE -> FLOAT CURR_TYPE
Rule 16    TYPE -> BOOL CURR_TYPE
Rule 17    TYPE -> CHAR CURR_TYPE
Rule 18    PARAMS -> TYPE ID ADD_VAR update_param_table PARAMS_P
Rule 19    PARAMS -> empty
Rule 20    PARAMS_P -> COMMA TYPE ID ADD_VAR update_param_table PARAMS_P
Rule 21    PARAMS_P -> empty
Rule 22    MAIN_G -> VOID MAIN set_start change_func PARIZQ PARDER LLVEIZQ ESTATUTO_P LLVEDER endProg
Rule 23    ESTATUTO -> ASIGNACION
Rule 24    ESTATUTO -> CONDICION
Rule 25    ESTATUTO -> LOOP_WHILE
Rule 26    ESTATUTO -> ESCRITURA
Rule 27    ESTATUTO -> LECTURA
Rule 28    ESTATUTO -> FUNC_CALL
Rule 29    ESTATUTO_P -> ESTATUTO ESTATUTO_P
Rule 30    ESTATUTO_P -> empty
Rule 31    ASIGNACION -> ID pila_operando_id ASIGN pila_operadores_add EXPRESION cuad_asign PTOCOMA
Rule 32    ASIGNACION -> VAR_DIM ASIGN pila_operadores_add EXPRESION cuad_asign PTOCOMA
Rule 33    CONDICION -> IF PARIZQ EXPRESION PARDER ver_if LLVEIZQ ESTATUTO_P LLVEDER CONDICION_P
Rule 34    CONDICION_P -> ELSE else_jump LLVEIZQ ESTATUTO_P LLVEDER if_end
Rule 35    CONDICION_P -> if_end
Rule 36    LOOP_WHILE -> WHILE add_jump PARIZQ EXPRESION PARDER ver_while LLVEIZQ ESTATUTO_P LLVEDER while_end
Rule 37    ESCRITURA -> PRINT PARIZQ PRINTABLE PARDER
Rule 38    PRINTABLE -> EXPRESION cuad_print PRINTABLE_P
Rule 39    PRINTABLE -> CTE_STR cuad_print_str PRINTABLE_P
Rule 40    PRINTABLE_P -> COMMA PRINTABLE
Rule 41    PRINTABLE_P -> empty
Rule 42    LECTURA -> READ PARIZQ ID cuad_read PARDER
Rule 43    FUNC_CALL -> ID ver_func_id_era PARIZQ fondo_falso_add PARM ver_param_num PARDER fondo_falso_pop cuad_gosub
Rule 44    FUNC_CALL_EXP -> ID ver_func_id_era_exp PARIZQ fondo_falso_add PARM ver_param_num PARDER fondo_falso_pop cuad_gosub
Rule 45    PARM -> EXPRESION ver_param PARM_P
Rule 46    PARM -> empty
Rule 47    PARM_P -> COMMA EXPRESION ver_param PARM_P
Rule 48    PARM_P -> empty
Rule 49    EXPRESION -> EXPRE cuad_or OR pila_operadores_add EXPRESION
Rule 50    EXPRESION -> EXPRE cuad_or
Rule 51    EXPRE -> EXPR cuad_and AND pila_operadores_add EXPRE
Rule 52    EXPRE -> EXPR cuad_and
Rule 53    EXPR -> EXP cuad_comp EXPR_P
Rule 54    EXPR_P -> LT pila_operadores_add EXPR
Rule 55    EXPR_P -> GT pila_operadores_add EXPR
Rule 56    EXPR_P -> DIFF pila_operadores_add EXPR
Rule 57    EXPR_P -> LTE pila_operadores_add EXPR
Rule 58    EXPR_P -> GTE pila_operadores_add EXPR
Rule 59    EXPR_P -> EQUAL pila_operadores_add EXPR
Rule 60    EXPR_P -> empty
Rule 61    EXP -> TERM cuad_sumres EXP_P
Rule 62    EXP_P -> MAS pila_operadores_add EXP
Rule 63    EXP_P -> MENOS pila_operadores_add EXP
Rule 64    EXP_P -> empty
Rule 65    TERM -> FACTOR cuad_muldiv TERM_P
Rule 66    TERM_P -> MULT pila_operadores_add TERM
Rule 67    TERM_P -> DIV pila_operadores_add TERM
Rule 68    TERM_P -> empty
Rule 69    FACTOR -> PARIZQ fondo_falso_add EXPRESION PARDER fondo_falso_pop
Rule 70    FACTOR -> VAR_CTE
Rule 71    VAR_CTE -> ID pila_operando_id
Rule 72    VAR_CTE -> CTE_INT pila_operando_int
Rule 73    VAR_CTE -> CTE_FLT pila_operando_float
Rule 74    VAR_CTE -> CTE_CHAR pila_operando_char
Rule 75    VAR_CTE -> FUNC_CALL_EXP
Rule 76    VAR_CTE -> VAR_DIM
Rule 77    VAR_DIM -> ID pila_operando_id CORIZQ ver_dim fondo_falso_add EXPRESION cuad_ver CORDER fondo_falso_pop matAux ver_dir_num cuad_var_dim
Rule 78    matAux -> CORIZQ ver_dim fondo_falso_add EXPRESION cuad_ver CORDER fondo_falso_pop
Rule 79    matAux -> empty
Rule 80    empty -> <empty>
Rule 81    CREATE_DIRFUNC -> <empty>
Rule 82    CURR_TYPE -> <empty>
Rule 83    ADD_VAR -> <empty>
Rule 84    ADD_FUNC -> <empty>
Rule 85    pila_operando_id -> <empty>
Rule 86    pila_operando_int -> <empty>
Rule 87    pila_operando_float -> <empty>
Rule 88    pila_operando_char -> <empty>
Rule 89    pila_operadores_add -> <empty>
Rule 90    fondo_falso_add -> <empty>
Rule 91    fondo_falso_pop -> <empty>
Rule 92    cuad_and -> <empty>
Rule 93    cuad_or -> <empty>
Rule 94    cuad_comp -> <empty>
Rule 95    cuad_sumres -> <empty>
Rule 96    cuad_muldiv -> <empty>
Rule 97    cuad_asign -> <empty>
Rule 98    cuad_read -> <empty>
Rule 99    cuad_return -> <empty>
Rule 100   ver_if -> <empty>
Rule 101   if_end -> <empty>
Rule 102   else_jump -> <empty>
Rule 103   add_jump -> <empty>
Rule 104   ver_while -> <empty>
Rule 105   while_end -> <empty>
Rule 106   cuad_print -> <empty>
Rule 107   cuad_print_str -> <empty>
Rule 108   change_func -> <empty>
Rule 109   update_param_table -> <empty>
Rule 110   func_jump -> <empty>
Rule 111   endFunc -> <empty>
Rule 112   ver_func_id_era -> <empty>
Rule 113   ver_func_id_era_exp -> <empty>
Rule 114   ver_param -> <empty>
Rule 115   ver_param_num -> <empty>
Rule 116   cuad_gosub -> <empty>
Rule 117   add_dim -> <empty>
Rule 118   actAddr -> <empty>
Rule 119   ver_dim -> <empty>
Rule 120   ver_dir_num -> <empty>
Rule 121   cuad_ver -> <empty>
Rule 122   cuad_var_dim -> <empty>
Rule 123   set_start -> <empty>
Rule 124   endProg -> <empty>

Terminals, with rules where they appear

AND                  : 51
ASIGN                : 31 32
BOOL                 : 16
CHAR                 : 17
COMMA                : 6 20 40 47
COMMENT              : 
CORDER               : 3 8 77 78
CORIZQ               : 3 8 77 78
CTE_CHAR             : 74
CTE_FLT              : 73
CTE_INT              : 3 8 72
CTE_STR              : 39
DIFF                 : 56
DIV                  : 67
ELSE                 : 34
EQUAL                : 59
FLOAT                : 15
FUNC                 : 10 11
GT                   : 55
GTE                  : 58
ID                   : 1 2 3 6 10 11 18 20 31 42 43 44 71 77
IF                   : 33
INT                  : 14
LLVEDER              : 10 11 22 33 34 36
LLVEIZQ              : 10 11 22 33 34 36
LT                   : 54
LTE                  : 57
MAIN                 : 22
MAS                  : 62
MENOS                : 63
MULT                 : 66
OR                   : 49
PARDER               : 10 11 22 33 36 37 42 43 44 69
PARIZQ               : 10 11 22 33 36 37 42 43 44 69
PRINT                : 37
PROGRAM              : 1
PTOCOMA              : 1 2 3 10 31 32
READ                 : 42
RETURN               : 10
VAR                  : 2 3
VOID                 : 11 22
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

ADD_FUNC             : 10 11
ADD_VAR              : 2 3 6 18 20
ASIGNACION           : 23
CONDICION            : 24
CONDICION_P          : 33
CREATE_DIRFUNC       : 1
CURR_TYPE            : 11 14 15 16 17
ESCRITURA            : 26
ESTATUTO             : 29
ESTATUTO_P           : 10 11 22 29 33 34 36
EXP                  : 53 62 63
EXPR                 : 51 52 54 55 56 57 58 59
EXPRE                : 49 50 51
EXPRESION            : 10 31 32 33 36 38 45 47 49 69 77 78
EXPR_P               : 53
EXP_P                : 61
FACTOR               : 65
FUNCS                : 12
FUNCS_P              : 1 12
FUNC_CALL            : 28
FUNC_CALL_EXP        : 75
LECTURA              : 27
LOOP_WHILE           : 25
MAIN_G               : 1
MAT_AUX              : 3
PARAMS               : 10 11
PARAMS_P             : 18 20
PARM                 : 43 44
PARM_P               : 45 47
PRINTABLE            : 37 40
PRINTABLE_P          : 38 39
PROGRAMA             : 0
TERM                 : 61 66 67
TERM_P               : 65
TYPE                 : 2 3 10 18 20
VARS                 : 4
VARS_P               : 1 4
VARS_PP              : 2 6
VAR_CTE              : 70
VAR_DIM              : 32 76
actAddr              : 3
add_dim              : 3 8
add_jump             : 36
change_func          : 22
cuad_and             : 51 52
cuad_asign           : 31 32
cuad_comp            : 53
cuad_gosub           : 43 44
cuad_muldiv          : 65
cuad_or              : 49 50
cuad_print           : 38
cuad_print_str       : 39
cuad_read            : 42
cuad_return          : 10
cuad_sumres          : 61
cuad_var_dim         : 77
cuad_ver             : 77 78
else_jump            : 34
empty                : 5 7 9 13 19 21 30 41 46 48 60 64 68 79
endFunc              : 10 11
endProg              : 22
fondo_falso_add      : 43 44 69 77 78
fondo_falso_pop      : 43 44 69 77 78
func_jump            : 10 11
if_end               : 34 35
matAux               : 77
pila_operadores_add  : 31 32 49 51 54 55 56 57 58 59 62 63 66 67
pila_operando_char   : 74
pila_operando_float  : 73
pila_operando_id     : 31 71 77
pila_operando_int    : 72
set_start            : 22
update_param_table   : 18 20
ver_dim              : 77 78
ver_dir_num          : 77
ver_func_id_era      : 43
ver_func_id_era_exp  : 44
ver_if               : 33
ver_param            : 45 47
ver_param_num        : 43 44
ver_while            : 36
while_end            : 36

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . PROGRAM CREATE_DIRFUNC ID PTOCOMA VARS_P FUNCS_P MAIN_G

    PROGRAM         shift and go to state 2

    PROGRAMA                       shift and go to state 1

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> PROGRAM . CREATE_DIRFUNC ID PTOCOMA VARS_P FUNCS_P MAIN_G
    (81) CREATE_DIRFUNC -> .

    ID              reduce using rule 81 (CREATE_DIRFUNC -> .)

    CREATE_DIRFUNC                 shift and go to state 3

state 3

    (1) PROGRAMA -> PROGRAM CREATE_DIRFUNC . ID PTOCOMA VARS_P FUNCS_P MAIN_G

    ID              shift and go to state 4


state 4

    (1) PROGRAMA -> PROGRAM CREATE_DIRFUNC ID . PTOCOMA VARS_P FUNCS_P MAIN_G

    PTOCOMA         shift and go to state 5


state 5

    (1) PROGRAMA -> PROGRAM CREATE_DIRFUNC ID PTOCOMA . VARS_P FUNCS_P MAIN_G
    (4) VARS_P -> . VARS VARS_P
    (5) VARS_P -> . empty
    (2) VARS -> . VAR TYPE ID ADD_VAR VARS_PP PTOCOMA
    (3) VARS -> . VAR TYPE ID ADD_VAR CORIZQ CTE_INT add_dim CORDER MAT_AUX actAddr PTOCOMA
    (80) empty -> .

    VAR             shift and go to state 9
    FUNC            reduce using rule 80 (empty -> .)
    VOID            reduce using rule 80 (empty -> .)

    VARS_P                         shift and go to state 6
    VARS                           shift and go to state 7
    empty                          shift and go to state 8

state 6

    (1) PROGRAMA -> PROGRAM CREATE_DIRFUNC ID PTOCOMA VARS_P . FUNCS_P MAIN_G
    (12) FUNCS_P -> . FUNCS FUNCS_P
    (13) FUNCS_P -> . empty
    (10) FUNCS -> . FUNC TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc
    (11) FUNCS -> . FUNC VOID CURR_TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc
    (80) empty -> .

    FUNC            shift and go to state 13
    VOID            reduce using rule 80 (empty -> .)

    FUNCS_P                        shift and go to state 10
    FUNCS                          shift and go to state 11
    empty                          shift and go to state 12

state 7

    (4) VARS_P -> VARS . VARS_P
    (4) VARS_P -> . VARS VARS_P
    (5) VARS_P -> . empty
    (2) VARS -> . VAR TYPE ID ADD_VAR VARS_PP PTOCOMA
    (3) VARS -> . VAR TYPE ID ADD_VAR CORIZQ CTE_INT add_dim CORDER MAT_AUX actAddr PTOCOMA
    (80) empty -> .

    VAR             shift and go to state 9
    FUNC            reduce using rule 80 (empty -> .)
    VOID            reduce using rule 80 (empty -> .)

    VARS                           shift and go to state 7
    VARS_P                         shift and go to state 14
    empty                          shift and go to state 8

state 8

    (5) VARS_P -> empty .

    FUNC            reduce using rule 5 (VARS_P -> empty .)
    VOID            reduce using rule 5 (VARS_P -> empty .)


state 9

    (2) VARS -> VAR . TYPE ID ADD_VAR VARS_PP PTOCOMA
    (3) VARS -> VAR . TYPE ID ADD_VAR CORIZQ CTE_INT add_dim CORDER MAT_AUX actAddr PTOCOMA
    (14) TYPE -> . INT CURR_TYPE
    (15) TYPE -> . FLOAT CURR_TYPE
    (16) TYPE -> . BOOL CURR_TYPE
    (17) TYPE -> . CHAR CURR_TYPE

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19

    TYPE                           shift and go to state 15

state 10

    (1) PROGRAMA -> PROGRAM CREATE_DIRFUNC ID PTOCOMA VARS_P FUNCS_P . MAIN_G
    (22) MAIN_G -> . VOID MAIN set_start change_func PARIZQ PARDER LLVEIZQ ESTATUTO_P LLVEDER endProg

    VOID            shift and go to state 21

    MAIN_G                         shift and go to state 20

state 11

    (12) FUNCS_P -> FUNCS . FUNCS_P
    (12) FUNCS_P -> . FUNCS FUNCS_P
    (13) FUNCS_P -> . empty
    (10) FUNCS -> . FUNC TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc
    (11) FUNCS -> . FUNC VOID CURR_TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc
    (80) empty -> .

    FUNC            shift and go to state 13
    VOID            reduce using rule 80 (empty -> .)

    FUNCS                          shift and go to state 11
    FUNCS_P                        shift and go to state 22
    empty                          shift and go to state 12

state 12

    (13) FUNCS_P -> empty .

    VOID            reduce using rule 13 (FUNCS_P -> empty .)


state 13

    (10) FUNCS -> FUNC . TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc
    (11) FUNCS -> FUNC . VOID CURR_TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc
    (14) TYPE -> . INT CURR_TYPE
    (15) TYPE -> . FLOAT CURR_TYPE
    (16) TYPE -> . BOOL CURR_TYPE
    (17) TYPE -> . CHAR CURR_TYPE

    VOID            shift and go to state 24
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19

    TYPE                           shift and go to state 23

state 14

    (4) VARS_P -> VARS VARS_P .

    FUNC            reduce using rule 4 (VARS_P -> VARS VARS_P .)
    VOID            reduce using rule 4 (VARS_P -> VARS VARS_P .)


state 15

    (2) VARS -> VAR TYPE . ID ADD_VAR VARS_PP PTOCOMA
    (3) VARS -> VAR TYPE . ID ADD_VAR CORIZQ CTE_INT add_dim CORDER MAT_AUX actAddr PTOCOMA

    ID              shift and go to state 25


state 16

    (14) TYPE -> INT . CURR_TYPE
    (82) CURR_TYPE -> .

    ID              reduce using rule 82 (CURR_TYPE -> .)

    CURR_TYPE                      shift and go to state 26

state 17

    (15) TYPE -> FLOAT . CURR_TYPE
    (82) CURR_TYPE -> .

    ID              reduce using rule 82 (CURR_TYPE -> .)

    CURR_TYPE                      shift and go to state 27

state 18

    (16) TYPE -> BOOL . CURR_TYPE
    (82) CURR_TYPE -> .

    ID              reduce using rule 82 (CURR_TYPE -> .)

    CURR_TYPE                      shift and go to state 28

state 19

    (17) TYPE -> CHAR . CURR_TYPE
    (82) CURR_TYPE -> .

    ID              reduce using rule 82 (CURR_TYPE -> .)

    CURR_TYPE                      shift and go to state 29

state 20

    (1) PROGRAMA -> PROGRAM CREATE_DIRFUNC ID PTOCOMA VARS_P FUNCS_P MAIN_G .

    $end            reduce using rule 1 (PROGRAMA -> PROGRAM CREATE_DIRFUNC ID PTOCOMA VARS_P FUNCS_P MAIN_G .)


state 21

    (22) MAIN_G -> VOID . MAIN set_start change_func PARIZQ PARDER LLVEIZQ ESTATUTO_P LLVEDER endProg

    MAIN            shift and go to state 30


state 22

    (12) FUNCS_P -> FUNCS FUNCS_P .

    VOID            reduce using rule 12 (FUNCS_P -> FUNCS FUNCS_P .)


state 23

    (10) FUNCS -> FUNC TYPE . ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc

    ID              shift and go to state 31


state 24

    (11) FUNCS -> FUNC VOID . CURR_TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc
    (82) CURR_TYPE -> .

    ID              reduce using rule 82 (CURR_TYPE -> .)

    CURR_TYPE                      shift and go to state 32

state 25

    (2) VARS -> VAR TYPE ID . ADD_VAR VARS_PP PTOCOMA
    (3) VARS -> VAR TYPE ID . ADD_VAR CORIZQ CTE_INT add_dim CORDER MAT_AUX actAddr PTOCOMA
    (83) ADD_VAR -> .

    CORIZQ          reduce using rule 83 (ADD_VAR -> .)
    COMMA           reduce using rule 83 (ADD_VAR -> .)
    PTOCOMA         reduce using rule 83 (ADD_VAR -> .)

    ADD_VAR                        shift and go to state 33

state 26

    (14) TYPE -> INT CURR_TYPE .

    ID              reduce using rule 14 (TYPE -> INT CURR_TYPE .)


state 27

    (15) TYPE -> FLOAT CURR_TYPE .

    ID              reduce using rule 15 (TYPE -> FLOAT CURR_TYPE .)


state 28

    (16) TYPE -> BOOL CURR_TYPE .

    ID              reduce using rule 16 (TYPE -> BOOL CURR_TYPE .)


state 29

    (17) TYPE -> CHAR CURR_TYPE .

    ID              reduce using rule 17 (TYPE -> CHAR CURR_TYPE .)


state 30

    (22) MAIN_G -> VOID MAIN . set_start change_func PARIZQ PARDER LLVEIZQ ESTATUTO_P LLVEDER endProg
    (123) set_start -> .

    PARIZQ          reduce using rule 123 (set_start -> .)

    set_start                      shift and go to state 34

state 31

    (10) FUNCS -> FUNC TYPE ID . ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc
    (84) ADD_FUNC -> .

    PARIZQ          reduce using rule 84 (ADD_FUNC -> .)

    ADD_FUNC                       shift and go to state 35

state 32

    (11) FUNCS -> FUNC VOID CURR_TYPE . ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc

    ID              shift and go to state 36


state 33

    (2) VARS -> VAR TYPE ID ADD_VAR . VARS_PP PTOCOMA
    (3) VARS -> VAR TYPE ID ADD_VAR . CORIZQ CTE_INT add_dim CORDER MAT_AUX actAddr PTOCOMA
    (6) VARS_PP -> . COMMA ID ADD_VAR VARS_PP
    (7) VARS_PP -> . empty
    (80) empty -> .

    CORIZQ          shift and go to state 38
    COMMA           shift and go to state 39
    PTOCOMA         reduce using rule 80 (empty -> .)

    VARS_PP                        shift and go to state 37
    empty                          shift and go to state 40

state 34

    (22) MAIN_G -> VOID MAIN set_start . change_func PARIZQ PARDER LLVEIZQ ESTATUTO_P LLVEDER endProg
    (108) change_func -> .

    PARIZQ          reduce using rule 108 (change_func -> .)

    change_func                    shift and go to state 41

state 35

    (10) FUNCS -> FUNC TYPE ID ADD_FUNC . PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc

    PARIZQ          shift and go to state 42


state 36

    (11) FUNCS -> FUNC VOID CURR_TYPE ID . ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc
    (84) ADD_FUNC -> .

    PARIZQ          reduce using rule 84 (ADD_FUNC -> .)

    ADD_FUNC                       shift and go to state 43

state 37

    (2) VARS -> VAR TYPE ID ADD_VAR VARS_PP . PTOCOMA

    PTOCOMA         shift and go to state 44


state 38

    (3) VARS -> VAR TYPE ID ADD_VAR CORIZQ . CTE_INT add_dim CORDER MAT_AUX actAddr PTOCOMA

    CTE_INT         shift and go to state 45


state 39

    (6) VARS_PP -> COMMA . ID ADD_VAR VARS_PP

    ID              shift and go to state 46


state 40

    (7) VARS_PP -> empty .

    PTOCOMA         reduce using rule 7 (VARS_PP -> empty .)


state 41

    (22) MAIN_G -> VOID MAIN set_start change_func . PARIZQ PARDER LLVEIZQ ESTATUTO_P LLVEDER endProg

    PARIZQ          shift and go to state 47


state 42

    (10) FUNCS -> FUNC TYPE ID ADD_FUNC PARIZQ . PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc
    (18) PARAMS -> . TYPE ID ADD_VAR update_param_table PARAMS_P
    (19) PARAMS -> . empty
    (14) TYPE -> . INT CURR_TYPE
    (15) TYPE -> . FLOAT CURR_TYPE
    (16) TYPE -> . BOOL CURR_TYPE
    (17) TYPE -> . CHAR CURR_TYPE
    (80) empty -> .

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19
    PARDER          reduce using rule 80 (empty -> .)

    TYPE                           shift and go to state 48
    PARAMS                         shift and go to state 49
    empty                          shift and go to state 50

state 43

    (11) FUNCS -> FUNC VOID CURR_TYPE ID ADD_FUNC . PARIZQ PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc

    PARIZQ          shift and go to state 51


state 44

    (2) VARS -> VAR TYPE ID ADD_VAR VARS_PP PTOCOMA .

    VAR             reduce using rule 2 (VARS -> VAR TYPE ID ADD_VAR VARS_PP PTOCOMA .)
    FUNC            reduce using rule 2 (VARS -> VAR TYPE ID ADD_VAR VARS_PP PTOCOMA .)
    VOID            reduce using rule 2 (VARS -> VAR TYPE ID ADD_VAR VARS_PP PTOCOMA .)


state 45

    (3) VARS -> VAR TYPE ID ADD_VAR CORIZQ CTE_INT . add_dim CORDER MAT_AUX actAddr PTOCOMA
    (117) add_dim -> .

    CORDER          reduce using rule 117 (add_dim -> .)

    add_dim                        shift and go to state 52

state 46

    (6) VARS_PP -> COMMA ID . ADD_VAR VARS_PP
    (83) ADD_VAR -> .

    COMMA           reduce using rule 83 (ADD_VAR -> .)
    PTOCOMA         reduce using rule 83 (ADD_VAR -> .)

    ADD_VAR                        shift and go to state 53

state 47

    (22) MAIN_G -> VOID MAIN set_start change_func PARIZQ . PARDER LLVEIZQ ESTATUTO_P LLVEDER endProg

    PARDER          shift and go to state 54


state 48

    (18) PARAMS -> TYPE . ID ADD_VAR update_param_table PARAMS_P

    ID              shift and go to state 55


state 49

    (10) FUNCS -> FUNC TYPE ID ADD_FUNC PARIZQ PARAMS . PARDER LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc

    PARDER          shift and go to state 56


state 50

    (19) PARAMS -> empty .

    PARDER          reduce using rule 19 (PARAMS -> empty .)


state 51

    (11) FUNCS -> FUNC VOID CURR_TYPE ID ADD_FUNC PARIZQ . PARAMS PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc
    (18) PARAMS -> . TYPE ID ADD_VAR update_param_table PARAMS_P
    (19) PARAMS -> . empty
    (14) TYPE -> . INT CURR_TYPE
    (15) TYPE -> . FLOAT CURR_TYPE
    (16) TYPE -> . BOOL CURR_TYPE
    (17) TYPE -> . CHAR CURR_TYPE
    (80) empty -> .

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19
    PARDER          reduce using rule 80 (empty -> .)

    PARAMS                         shift and go to state 57
    TYPE                           shift and go to state 48
    empty                          shift and go to state 50

state 52

    (3) VARS -> VAR TYPE ID ADD_VAR CORIZQ CTE_INT add_dim . CORDER MAT_AUX actAddr PTOCOMA

    CORDER          shift and go to state 58


state 53

    (6) VARS_PP -> COMMA ID ADD_VAR . VARS_PP
    (6) VARS_PP -> . COMMA ID ADD_VAR VARS_PP
    (7) VARS_PP -> . empty
    (80) empty -> .

    COMMA           shift and go to state 39
    PTOCOMA         reduce using rule 80 (empty -> .)

    VARS_PP                        shift and go to state 59
    empty                          shift and go to state 40

state 54

    (22) MAIN_G -> VOID MAIN set_start change_func PARIZQ PARDER . LLVEIZQ ESTATUTO_P LLVEDER endProg

    LLVEIZQ         shift and go to state 60


state 55

    (18) PARAMS -> TYPE ID . ADD_VAR update_param_table PARAMS_P
    (83) ADD_VAR -> .

    COMMA           reduce using rule 83 (ADD_VAR -> .)
    PARDER          reduce using rule 83 (ADD_VAR -> .)

    ADD_VAR                        shift and go to state 61

state 56

    (10) FUNCS -> FUNC TYPE ID ADD_FUNC PARIZQ PARAMS PARDER . LLVEIZQ func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc

    LLVEIZQ         shift and go to state 62


state 57

    (11) FUNCS -> FUNC VOID CURR_TYPE ID ADD_FUNC PARIZQ PARAMS . PARDER LLVEIZQ func_jump ESTATUTO_P LLVEDER endFunc

    PARDER          shift and go to state 63


state 58

    (3) VARS -> VAR TYPE ID ADD_VAR CORIZQ CTE_INT add_dim CORDER . MAT_AUX actAddr PTOCOMA
    (8) MAT_AUX -> . CORIZQ CTE_INT add_dim CORDER
    (9) MAT_AUX -> . empty
    (80) empty -> .

    CORIZQ          shift and go to state 64
    PTOCOMA         reduce using rule 80 (empty -> .)

    MAT_AUX                        shift and go to state 65
    empty                          shift and go to state 66

state 59

    (6) VARS_PP -> COMMA ID ADD_VAR VARS_PP .

    PTOCOMA         reduce using rule 6 (VARS_PP -> COMMA ID ADD_VAR VARS_PP .)


state 60

    (22) MAIN_G -> VOID MAIN set_start change_func PARIZQ PARDER LLVEIZQ . ESTATUTO_P LLVEDER endProg
    (29) ESTATUTO_P -> . ESTATUTO ESTATUTO_P
    (30) ESTATUTO_P -> . empty
    (23) ESTATUTO -> . ASIGNACION
    (24) ESTATUTO -> . CONDICION
    (25) ESTATUTO -> . LOOP_WHILE
    (26) ESTATUTO -> . ESCRITURA
    (27) ESTATUTO -> . LECTURA
    (28) ESTATUTO -> . FUNC_CALL
    (80) empty -> .
    (31) ASIGNACION -> . ID pila_operando_id ASIGN pila_operadores_add EXPRESION cuad_asign PTOCOMA
    (32) ASIGNACION -> . VAR_DIM ASIGN pila_operadores_add EXPRESION cuad_asign PTOCOMA
    (33) CONDICION -> . IF PARIZQ EXPRESION PARDER ver_if LLVEIZQ ESTATUTO_P LLVEDER CONDICION_P
    (36) LOOP_WHILE -> . WHILE add_jump PARIZQ EXPRESION PARDER ver_while LLVEIZQ ESTATUTO_P LLVEDER while_end
    (37) ESCRITURA -> . PRINT PARIZQ PRINTABLE PARDER
    (42) LECTURA -> . READ PARIZQ ID cuad_read PARDER
    (43) FUNC_CALL -> . ID ver_func_id_era PARIZQ fondo_falso_add PARM ver_param_num PARDER fondo_falso_pop cuad_gosub
    (77) VAR_DIM -> . ID pila_operando_id CORIZQ ver_dim fondo_falso_add EXPRESION cuad_ver CORDER fondo_falso_pop matAux ver_dir_num cuad_var_dim

    LLVEDER         reduce using rule 80 (empty -> .)
    ID              shift and go to state 76
    IF              shift and go to state 78
    WHILE           shift and go to state 79
    PRINT           shift and go to state 80
    READ            shift and go to state 81

    ESTATUTO_P                     shift and go to state 67
    ESTATUTO                       shift and go to state 68
    empty                          shift and go to state 69
    ASIGNACION                     shift and go to state 70
    CONDICION                      shift and go to state 71
    LOOP_WHILE                     shift and go to state 72
    ESCRITURA                      shift and go to state 73
    LECTURA                        shift and go to state 74
    FUNC_CALL                      shift and go to state 75
    VAR_DIM                        shift and go to state 77

state 61

    (18) PARAMS -> TYPE ID ADD_VAR . update_param_table PARAMS_P
    (109) update_param_table -> .

    COMMA           reduce using rule 109 (update_param_table -> .)
    PARDER          reduce using rule 109 (update_param_table -> .)

    update_param_table             shift and go to state 82

state 62

    (10) FUNCS -> FUNC TYPE ID ADD_FUNC PARIZQ PARAMS PARDER LLVEIZQ . func_jump ESTATUTO_P RETURN EXPRESION cuad_return PTOCOMA LLVEDER endFunc
    (110) func_jump -> .
